# SBS-RAG-for-Zotero

./: CHANGELOG.md  CONTRIBUTING.md  MANUAL_RELEASE_STEPS.md  README.md  RELEASE_NOTES_v0.4.3.md  SECURITY.md  backend_bundle.spec  backend_server_main.py  package-lock.json  package.json  requirements.txt
.github/workflows/: build-all.yml
archive/: README.md
backend/: academic_prompts.py  deps.py  embed_utils.py  interface.py  main.py  pdf.py  zotero_dbase.py
backend/model_providers/: __init__.py  additional.py  github_models.py  openai.py
backend/routes/: health.py  library.py
backend/tests/: test_providers.py
docs/: ACADEMIC_PROMPTING_2025.md  AUTO_UPDATES.md  BUILD_CHECKLIST.md  DEB_CONTROL_FILE_FIX.md  DESKTOP_APP.md  LINUX_BACKEND_TROUBLESHOOTING.md  LINUX_PACKAGING.md  PACKAGE_MANAGER_DISTRIBUTION.md  PROMPTING_QUICKSTART.md  PYINSTALLER_BUNDLE_GUIDE.md  README.md  RELEASE_PLAN_v0.2.0.md  RELEASE_PROCESS.md  V0.4.0_DEVELOPMENT_SUMMARY.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_BUILD_QUICKREF.md  WINDOWS_SUPPORT_TODO.md  implementation_v0.2.0_archive.md  provider_guide.md  rag_improvements.md  release_notes_v0.1.11_archive.md
electron/: README.md  main.ts
frontend/: index.html  package-lock.json  package.json
scripts/: bundle-python-pyinstaller-windows.bat  create-default-profile.sh
src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  embeddings.rs  main.rs  pdf.rs  state.rs  vector_db.rs  zotero.rs
(+34 files in other folders)
