[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
anyhow = "1.0.102"
ort = "2.0.0-rc.12"
reqwest = { version = "0.13.2", features = ["json"] }
dirs = "6.0.0"
tokenizers = "0.22.2"
pdf-extract = "0.10.0"
tokio = { version = "1.52.0", features = ["full"] }
hnsw_rs = "0.3.4"
ndarray = "0.17.2"

